--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "axios": "^1.4.0",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "docxtemplater": "^3.61.1",
+    "express": "^4.18.2",
+    "number-to-words": "^1.2.4",
+    "pizzip": "^3.1.8"
   }
 }
